# swagger.json
@@ -148,175 +148,57 @@
                         "content": {}
                     }
                 }
-            },
-            "api/users/signout/{userId}": {
-                "get": {
-                    "tags": [
-                        "user"
-                    ],
-                    "summary": "Get user by user name",
-                    "description": "",
-                    "operationId": "getUserByName",
-                    "parameters": [
-                        {
-                            "name": "userId",
-                            "in": "path",
-                            "description": "userId to be signed out",
-                            "required": true,
-                            "schema": {
-                                "type": "string"
-                            }
-                        }
-                    ],
-                    "responses": {
-                        "200": {
-                            "description": "successful operation",
-                            "content": {
-                                "application/json": {
-                                    "schema": {
-                                        "jwtToken": {
-                                            "type": "string",
-                                            "example": "James Smith"
-                                        },
-                                        "user": {
-                                            "type": "object",
-                                            "example": {}
-                                        }
-                                    }
-                                },
-                                "application/xml": {
-                                    "schema": {
-                                        "jwtToken": {
-                                            "type": "string",
-                                            "example": "James Smith"
-                                        },
-                                        "user": {
-                                            "type": "object",
-                                            "example": {}
-                                        }
-                                    }
-                                }
-                            }
+            }
+        },
+        "/user/{userId}": {
+            "put": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get user by user name",
+                "description": "",
+                "operationId": "getUserByName",
+                "parameters": [
+                    {
+                        "name": "userId",
+                        "in": "path",
+                        "description": "userId to be signed out",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example":"656e30a00e583cb855b5785c"
                         }
                     }
-                }
-            },
-            "api/users/{userId}": {
-                "get": {
-                    "tags": [
-                        "user"
-                    ],
-                    "summary": "Get user by user name",
-                    "description": "",
-                    "operationId": "getUserByName",
-                    "parameters": [
-                        {
-                            "name": "userId",
-                            "in": "path",
-                            "description": "The name that needs to be fetched. Use user1 for testing. ",
-                            "required": true,
+                ],
+                "requestBody": {
+                    "description": "Created user object",
+                    "content": {
+                        "application/json": {
                             "schema": {
-                                "type": "string"
-                            }
-                        }
-                    ],
-                    "responses": {
-                        "200": {
-                            "description": "successful operation",
-                            "content": {
-                                "application/json": {
-                                    "schema": {
-                                        "$ref": "#/components/schemas/User"
+                                "type": "object",
+                                "properties": {
+                                    "fullName": {
+                                        "type": "string",
+                                        "example": "James Smith"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "james@gmail.com"
+                                    },
+                                    "phone":{
+                                        "type":"string",
+                                        "example":"111-111-1110"
                                     }
                                 },
-                                "application/xml": {
-                                    "schema": {
-                                        "$ref": "#/components/schemas/User"
-                                    }
+                                "xml": {
+                                    "name": "user"
                                 }
                             }
-                        },
-                        "400": {
-                            "description": "Invalid username supplied"
-                        },
-                        "404": {
-                            "description": "User not found"
                         }
                     }
                 },
-                "put": {
-                    "tags": [
-                        "user"
-                    ],
-                    "summary": "Update user",
-                    "description": "This can only be done by the logged in user.",
-                    "operationId": "updateUser",
-                    "parameters": [
-                        {
-                            "name": "userId",
-                            "in": "path",
-                            "description": "name that need to be deleted",
-                            "required": true,
-                            "schema": {
-                                "type": "string"
-                            }
-                        }
-                    ],
-                    "requestBody": {
-                        "description": "Update an existent user in the store",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            },
-                            "application/xml": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            },
-                            "application/x-www-form-urlencoded": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/User"
-                                }
-                            }
-                        }
-                    },
-                    "responses": {
-                        "default": {
-                            "description": "successful operation"
-                        }
-                    }
-                },
-                "delete": {
-                    "tags": [
-                        "user"
-                    ],
-                    "summary": "Delete user",
-                    "description": "This can only be done by the logged in user.",
-                    "operationId": "deleteUser",
-                    "parameters": [
-                        {
-                            "name": "username",
-                            "in": "path",
-                            "description": "The name that needs to be deleted",
-                            "required": true,
-                            "schema": {
-                                "type": "string"
-                            }
-                        }
-                    ],
-                    "responses": {
-                        "200": {
-                            "description": "successful operation"
-                        },
-                        "400": {
-                            "description": "Invalid username supplied"
-                        },
-                        "404": {
-                            "description": "User not found"
-                        }
-                    }
+                "responses": {
+                    "200": {}
                 }
             }
         },
